add: favotites animals, adoption logic, personal cabinet
